--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@ title: Your New Jekyll Site
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  <a href="/info.html">And antoher link</a>
 </div>
