Added Featured Artists for 2014

--- a/apply/apply.html
+++ b/apply/apply.html
@@ -4,7 +4,7 @@ layout: apply
 top_menu_id: apply
 ---
 <h2>Online Artist Application</h2>
-<!--
+
 <script src='http://entrythingy.s3.amazonaws.com/resources/entrythingy.js'></script>
 <iframe id='et_uploadtarget' name='et_uploadtarget' src='' style='width:0px;height:0px;border:0'> </iframe>
 <div id='et_apparea' style='text-align:left;'>
@@ -20,6 +20,5 @@ top_menu_id: apply
   var sitecode="s1.c3RhbnRob255cGFya2FydHNmZXN0aXZhbC5vcmc=";
   entryThingy();
 </script>
--->
-<p>Check back in January...</p>
-<a href='/process/index.html'>Back to artist info.</a>
+
+<a href='/apply/index.html'>Back to artist info.</a>
