Call for Artists 2014

--- a/apply/apply.html
+++ b/apply/apply.html
@@ -18,6 +18,7 @@ top_menu_id: apply
 </div>
 <script>
   var sitecode="s1.c3RhbnRob255cGFya2FydHNmZXN0aXZhbC5vcmc=";
+  w_['entrantskipmain']="y";
   entryThingy();
 </script>
 
