Make online app wider

--- a/apply/apply.html
+++ b/apply/apply.html
@@ -1,6 +1,6 @@
 ---
 title: St. Anthony Park Arts Festival - Artists Application
-layout: apply
+layout: plain
 top_menu_id: apply
 ---
 <h2>Online Artist Application</h2>
